get rid of chart animation

--- a/client/elements/mjbe-updating-grid/mjbe-updating-grid.html
+++ b/client/elements/mjbe-updating-grid/mjbe-updating-grid.html
@@ -15,10 +15,11 @@
     id='mutating_chart'
     type='column'
     options='{"title": "Random data",
-              "vAxis": {"minValue" : 0, "maxValue": 10},
-              "animation": {"duration": "1000"}}'
+              "vAxis": {"minValue" : 0, "maxValue": 10}
+              }'
     cols='[{"label": "Data", "type": "string"},{"label": "Value", "type": "number"}]'
-    rows='[["Col1", 5.0],["Col2", 5.0],["Col3", 5.0]]'>
+    rows='[["Col1", 5.0],["Col2", 5.0],["Col3", 5.0]]'
+    type='line'>
   </google-chart>
 
   </template>
