--- a/client/elements/elements.html
+++ b/client/elements/elements.html
@@ -41,6 +41,7 @@
 <link rel="import" href="../bower_components/neon-animation/neon-shared-element-animatable-behavior.html">
 <link rel="import" href="../bower_components/paper-styles/typography.html">
 <link rel="import" href="../bower_components/paper-dialog/paper-dialog.html">
+<link rel="import" href="../bower_components/paper-dropdown-menu/paper-dropdown-menu.html">
 
 
 <!-- CUSTOM ELEMENTS -->
@@ -60,4 +61,5 @@
 <link rel="import" href="mjbe-profile/mjbe-profile.html">
 <link rel="import" href="mjbe-updating-grid/mjbe-updating-grid.html">
 <link rel="import" href="mjbe-student-home/mjbe-student-home.html">
+<link rel="import" href="mjbe-teacher-pie/mjbe-teacher-pie.html">
 
