--- a/client/elements/mjbe-profile/mjbe-profile.html
+++ b/client/elements/mjbe-profile/mjbe-profile.html
@@ -73,7 +73,7 @@
         </paper-material>
 
         <paper-material elevation="1" style="background-color: #FF2D55" class="tall-box">
-          <mjbe-updating-grid></mjbe-updating-grid>
+          <mjbe-updating-grid loadtimes="{{loadtimes}}"></mjbe-updating-grid>
         </paper-material>
 
       </div>
@@ -174,6 +174,10 @@
         },
 
         loadstudentskills: {
+          notify: true
+        },
+
+        loadtimes: {
           notify: true
         },
 
