displaying no badges working

--- a/client/app/profile/profile.html
+++ b/client/app/profile/profile.html
@@ -1,6 +1,1 @@
-<mjbe-profile loadrequest="{{request}}" accepted="{{accepted}}" name="{{name}}" joined="{{joined}}" userselection="{{userselection}}" loadskills="{{skillsData}}"  loadstudentskills="{{studentSkillsData}}" points="{{points}}" loadtimes="{{times}}" bind-polymer></mjbe-profile>
-<!--Requests:
-<div ng-click="accept()">{{requests[0].teacher}}</div>
-Teachers:
-<div>{{teacher}}</div>-->
-
+<mjbe-profile loadrequest="{{request}}" accepted="{{accepted}}" name="{{name}}" joined="{{joined}}" userselection="{{userselection}}" loadskills="{{skillsData}}"  loadstudentskills="{{studentSkillsData}}" points="{{points}}" loadtimes="{{times}}" loadbadge="{{badge}}" bind-polymer></mjbe-profile>
