--- a/client/elements/mjbe-profile/mjbe-profile.html
+++ b/client/elements/mjbe-profile/mjbe-profile.html
@@ -105,7 +105,7 @@
       <div class="box tile layout vertical flex">
 
         <paper-material elevation="1" style="background-color: white" class="short-box" >
-          <h3>Total time today</h3><mjbe-timer minutes="{{minutes}}" seconds="{{seconds}}"></mjbe-timer>
+          <h3>Time worked today</h3><mjbe-timer minutes="{{minutes}}" seconds="{{seconds}}"></mjbe-timer>
         </paper-material>
 
         <paper-material elevation="1" style="background-color: #FF9500" class="tall-box">
