--- a/client/index.html
+++ b/client/index.html
@@ -47,7 +47,7 @@
         <!-- Main Toolbar -->
 
         <paper-toolbar ng-controller="NavbarCtrl" style="background:#FF3B30">
-          <div class="title top">TORCHCADEMY</div>
+          <div class="title top">forgED</div>
 <!--           <div class="top" ng-show="loggedIn">Hello {{name}}</div> -->
           <div class="horizontal layout">
             <paper-tabs>
