--- a/client/elements/elements.html
+++ b/client/elements/elements.html
@@ -62,4 +62,5 @@
 <link rel="import" href="mjbe-updating-grid/mjbe-updating-grid.html">
 <link rel="import" href="mjbe-student-home/mjbe-student-home.html">
 <link rel="import" href="mjbe-teacher-pie/mjbe-teacher-pie.html">
+<link rel="import" href="mjbe-profile-pie/mjbe-profile-pie.html">
 
