--- a/client/elements/mjbe-student-home/mjbe-student-home.html
+++ b/client/elements/mjbe-student-home/mjbe-student-home.html
@@ -5,6 +5,7 @@
         display: block;
         padding: 15px;
         background: #444;
+        height: 100%;
       }
       paper-material {
         margin: 10px;
