--- a/client/elements/mjbe-profile/mjbe-profile.html
+++ b/client/elements/mjbe-profile/mjbe-profile.html
@@ -270,8 +270,8 @@
 
       setClock: function() {
         var time = Date.now();
-        this.seconds = this.times[time - time % (24 * 60 * 60 * 1000)] % 60;
-        this.minutes = Math.floor(this.times[time - time % (24 * 60 * 60 * 1000)] / 60);
+        this.seconds = this.times[time - time % (24 * 60 * 60 * 1000)] % 60 || 0;
+        this.minutes = Math.floor(this.times[time - time % (24 * 60 * 60 * 1000)] / 60) || 0;
       },
 
       acceptRequest: function() {
