--- a/client/elements/mjbe-dashboard/mjbe-dashboard.html
+++ b/client/elements/mjbe-dashboard/mjbe-dashboard.html
@@ -57,7 +57,7 @@
     <!--dashboard content-->
 
     <!-- whole grid -->
-    <!-- <div class="bar horizontal layout around-justified wrap tile"> -->
+    <div class="bar horizontal layout around-justified wrap tile">
 
 
       <!-- FIRST COLUMN -->
@@ -81,7 +81,7 @@
         </div>
 
 
-    <!-- </div> -->
+    </div>
 
 
     <!--add class modal-->
