--- a/client/elements/mjbe-profile/mjbe-profile.html
+++ b/client/elements/mjbe-profile/mjbe-profile.html
@@ -104,8 +104,7 @@
 
         <!-- CALENDAR box -->
         <paper-material elevation="1" style="background-color: #FF9500" class="tall-box">
-          <h3>Calendar?</h3>
-          <p>Member since April 1, 2017</p>
+              Calendar
         </paper-material>
 
       </div>
