--- a/client/index.html
+++ b/client/index.html
@@ -47,7 +47,9 @@
         <!-- Main Toolbar -->
 
         <paper-toolbar ng-controller="NavbarCtrl" style="background:#FF3B30">
-          <div class="title top">forgED</div>
+          <div class="title top">
+            <img src="http://icons.iconarchive.com/icons/icons8/windows-8/512/Sports-Olympic-Torch-icon.png" height="50" width="50" alt="">
+          </div>
 <!--           <div class="top" ng-show="loggedIn">Hello {{name}}</div> -->
           <div class="horizontal layout">
             <paper-tabs>
