fixed module finish modal

--- a/client/elements/elements.html
+++ b/client/elements/elements.html
@@ -42,6 +42,7 @@
 <link rel="import" href="../bower_components/paper-styles/typography.html">
 <link rel="import" href="../bower_components/paper-dialog/paper-dialog.html">
 <link rel="import" href="../bower_components/paper-dropdown-menu/paper-dropdown-menu.html">
+<link rel="import" href="../bower_components/paper-date-picker/paper-date-picker.html">
 
 
 <!-- CUSTOM ELEMENTS -->
