fixed height issues for profile and homepage

--- a/client/elements/mjbe-profile/mjbe-profile.html
+++ b/client/elements/mjbe-profile/mjbe-profile.html
@@ -6,8 +6,7 @@
         display: block;
         padding: 15px;
         background: #444;
-/*        height: calc(100% - 30px);
-        min-height: 730px;*/
+        min-height: 800px;
       }
       paper-material {
         margin: 10px;
