--- a/client/elements/mjbe-dashboard-classprogress/mjbe-collapse-list.html
+++ b/client/elements/mjbe-dashboard-classprogress/mjbe-collapse-list.html
@@ -258,6 +258,8 @@
           for (var i = 0; i < result.length; i++) {
             result[i].expanded = false;
           }
+          console.log('students');
+          console.log(result);
           return result;
         } catch (e) {}
       },
