--- a/client/elements/about-us/about-us.html
+++ b/client/elements/about-us/about-us.html
@@ -183,18 +183,18 @@
             on-zoom-changed="setPointSize" on-google-map-ready="setPointSize">
             </google-map>
             <point-overlay map="[[map]]" uniforms="{{uniforms}}" data='[{"lat": 34.05227, "lng": -118.243474}, 
-              {"lat": 32.7157205, "lng": -117.1609371}, {"lat": 30.396105, "lng": -88.8855034}, {"lat": 42.09867, "lng": -75.918FFF3}]'>
+              {"lat": 32.7157205, "lng": -117.1609371}, {"lat": 30.396105, "lng": -88.8855034}, {"lat": 42.09867, "lng": -75.9180003}]'>
             </point-overlay>
           </template>
       </div>
       
-      <div>
+      <div style="min-height: 800px">
         <paper-card class="square" image="https://www.polymer-project.org/images/logos/lockup.svg"></paper-card>
         <paper-card class="square" image="https://angularjs.org/img/AngularJS-large.png"></paper-card>
         <paper-card class="square" image="https://www.mongodb.com/assets/global/mongodb-logo-web-tagline-b2622b08d239fca84b1787bb211115e264a3629b9e99f1bb46ff1b092877b03c.png"></paper-card>
         <paper-card class="square" image="https://nodejs.org/static/images/logo.svg"></paper-card>
         <paper-card class="square" image="http://yeoman.io/static/logo.f0661e3819.png"></paper-card>
-        <paper-card class="square" image="https://i.cloudup.com/zfY6lL7eFa-3FFFx3FFF.png"></paper-card>
+        <paper-card class="square" image="https://i.cloudup.com/zfY6lL7eFa-3000x3000.png"></paper-card>
         <paper-card class="square" image="https://www.npmjs.com/static/images/npm-logo.svg"></paper-card>
         <paper-card class="square" image="https://avatars2.githubusercontent.com/u/1630826?v=3&s=200"></paper-card>
         <paper-card class="square" image="http://bower.io/img/bower-logo.png"></paper-card>
