fix undefined time display bug

--- a/client/elements/mjbe-profile/mjbe-profile.html
+++ b/client/elements/mjbe-profile/mjbe-profile.html
@@ -301,6 +301,8 @@
           this.playAnimation('entry');
         });
         this.quote = quotes[Math.floor(Math.random() * quotes.length)];
+        this.seconds = 0;
+        this.minutes = 0;
       },
 
       parse: function(load) {
