--- a/client/elements/elements.html
+++ b/client/elements/elements.html
@@ -43,6 +43,7 @@
 <link rel="import" href="../bower_components/paper-dialog/paper-dialog.html">
 <link rel="import" href="../bower_components/paper-dropdown-menu/paper-dropdown-menu.html">
 <link rel="import" href="../bower_components/paper-date-picker/paper-date-picker.html">
+<link rel="import" href="../../bower_components/iron-resizable-behavior/iron-resizable-behavior.html">
 
 
 <!-- CUSTOM ELEMENTS -->
