add contributing and style guide

--- a/client/elements/mjbe-drawing-canvas/mjbe-drawing-canvas.html
+++ b/client/elements/mjbe-drawing-canvas/mjbe-drawing-canvas.html
@@ -1,4 +1,4 @@
-<script src="../../bower_components/fabric.js/dist/fabric.js"></script>
+<!--<script src="../../bower_components/fabric.js/dist/fabric.js"></script>-->
 <dom-module id="mjbe-drawing-canvas">
   <style>
    --paper-fab-mini {
