better landing page

--- a/client/elements/elements.html
+++ b/client/elements/elements.html
@@ -64,4 +64,5 @@
 <link rel="import" href="mjbe-student-home/mjbe-student-home.html">
 <link rel="import" href="mjbe-teacher-pie/mjbe-teacher-pie.html">
 <link rel="import" href="mjbe-profile-pie/mjbe-profile-pie.html">
+<link rel="import" href="mjbe-landing/mjbe-landing.html">
 
