--- a/client/elements/auth-card/auth-card.html
+++ b/client/elements/auth-card/auth-card.html
@@ -23,7 +23,7 @@
         <div hidden$="{{isSignUpForm(header)}}">
           <paper-radio-group id="radio">
             <paper-radio-button name="student">Student</paper-radio-button>
-            <paper-radio-button name="teacher">Teacher</paper-radio-button>
+            <paper-radio-button name="teacher" disabled>Teacher</paper-radio-button>
           </paper-radio-group>
           <paper-input
             id="nameInput"
