--- a/client/elements/auth-card/auth-card.html
+++ b/client/elements/auth-card/auth-card.html
@@ -40,7 +40,7 @@
           label="Email Address"
           value="{{useremail::input}}"
           type="email"
-          error-message="Please enter your email address."
+          error-message="Please enter a valid email address."
           required
           >
         </paper-input>
@@ -148,7 +148,10 @@
         } else if (!this.useremail) {
           this.$.errortoast.text = 'Please enter your email address.';
           this.$.errortoast.show();
-        } else if (!this.userpass && this.userpass !== this.verifypass) {
+        } else if (!this.validateEmail(this.useremail)) {
+          this.$.errortoast.text = 'Please enter a valid email address.';
+          this.$.errortoast.show();
+        } else if (!this.userpass || this.userpass !== this.verifypass) {
           this.$.errortoast.text = 'Passwords do not match.';
           this.$.errortoast.show();
         } else {
@@ -171,6 +174,11 @@
         if (e.charCode === 13) {
           this.authenticate();
         }
+      },
+      validateEmail: function(input) {
+        var emailPattern = new RegExp(/^[-a-z0-9~!$%^&*_=+}{\'?]+(\.[-a-z0-9~!$%^&*_=+}{\'?]+)*@([a-z0-9_][-a-z0-9_]*(\.[-a-z0-9_]+)*\.(aero|arpa|biz|com|coop|edu|gov|info|int|mil|museum|name|net|org|pro|travel|mobi|[a-z][a-z])|([0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}))(:[0-9]{1,5})?$/i);
+        
+        return emailPattern.test(input);
       }
     });
   </script>
